# SDLit

./: LICENSE.md  README.md  meson.build  meson.options
example/: README.md  cursor_test.cpp  image_viewer.cpp  list_locale.cpp  play_chunk.cpp  play_music.cpp  show_text.cpp  sine_wave.cpp  smpte_test.cpp
include/: SDLit.hpp  sdlit.hpp
src/: SDLit.cpp  sdlit.cpp
